src/python/bgs_tools/build/preprocessor/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> imports_statement
Rule 5     statement -> define_block
Rule 6     statement -> define_macro
Rule 7     statement -> macro_call
Rule 8     imports_statement -> IMPORTS LCURLY import_list RCURLY
Rule 9     import_list -> import_list import_item
Rule 10    import_list -> import_item
Rule 11    import_item -> IDENTIFIER
Rule 12    define_block -> DEFINE LCURLY variable_list RCURLY
Rule 13    optional_flag -> IDENTIFIER
Rule 14    optional_flag -> empty
Rule 15    variable_list -> variable_list variable_definition
Rule 16    variable_list -> variable_definition
Rule 17    variable_definition -> IDENTIFIER EQUALS value flag_list_opt
Rule 18    flag_list_opt -> LBRACKET flag_list RBRACKET
Rule 19    flag_list_opt -> empty
Rule 20    flag_list -> flag_list COMMA IDENTIFIER
Rule 21    flag_list -> flag_list IDENTIFIER
Rule 22    flag_list -> IDENTIFIER
Rule 23    define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY
Rule 24    macro_body -> macro_body ANY_TEXT
Rule 25    macro_body -> ANY_TEXT
Rule 26    macro_params -> macro_params COMMA DOLLAR_IDENTIFIER
Rule 27    macro_params -> DOLLAR_IDENTIFIER
Rule 28    macro_params -> empty
Rule 29    macro_call -> MACRO IDENTIFIER LPAREN macro_args RPAREN
Rule 30    macro_args -> macro_args COMMA value
Rule 31    macro_args -> value
Rule 32    macro_args -> empty
Rule 33    value -> STRING
Rule 34    value -> NUMBER
Rule 35    value -> IDENTIFIER
Rule 36    value -> DOLLAR_IDENTIFIER
Rule 37    empty -> <empty>

Terminals, with rules where they appear

ANY_TEXT             : 24 25
COMMA                : 20 26 30
DEFINE               : 12
DEFINE_MACRO         : 23
DOLLAR_IDENTIFIER    : 26 27 36
EQUALS               : 17
IDENTIFIER           : 11 13 17 20 21 22 23 29 35
IMPORTS              : 8
LBRACKET             : 18
LCURLY               : 8 12 23
LPAREN               : 23 29
MACRO                : 29
NUMBER               : 34
RBRACKET             : 18
RCURLY               : 8 12 23
RPAREN               : 23 29
STRING               : 33
error                : 

Nonterminals, with rules where they appear

define_block         : 5
define_macro         : 6
empty                : 14 19 28 32
flag_list            : 18 20 21
flag_list_opt        : 17
import_item          : 9 10
import_list          : 8 9
imports_statement    : 4
macro_args           : 29 30
macro_body           : 23 24
macro_call           : 7
macro_params         : 23 26
optional_flag        : 
program              : 0
statement            : 2 3
statements           : 1 2
value                : 17 30 31
variable_definition  : 15 16
variable_list        : 12 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . imports_statement
    (5) statement -> . define_block
    (6) statement -> . define_macro
    (7) statement -> . macro_call
    (8) imports_statement -> . IMPORTS LCURLY import_list RCURLY
    (12) define_block -> . DEFINE LCURLY variable_list RCURLY
    (23) define_macro -> . DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY
    (29) macro_call -> . MACRO IDENTIFIER LPAREN macro_args RPAREN

    IMPORTS         shift and go to state 8
    DEFINE          shift and go to state 9
    DEFINE_MACRO    shift and go to state 10
    MACRO           shift and go to state 11

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    imports_statement              shift and go to state 4
    define_block                   shift and go to state 5
    define_macro                   shift and go to state 6
    macro_call                     shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . imports_statement
    (5) statement -> . define_block
    (6) statement -> . define_macro
    (7) statement -> . macro_call
    (8) imports_statement -> . IMPORTS LCURLY import_list RCURLY
    (12) define_block -> . DEFINE LCURLY variable_list RCURLY
    (23) define_macro -> . DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY
    (29) macro_call -> . MACRO IDENTIFIER LPAREN macro_args RPAREN

    $end            reduce using rule 1 (program -> statements .)
    IMPORTS         shift and go to state 8
    DEFINE          shift and go to state 9
    DEFINE_MACRO    shift and go to state 10
    MACRO           shift and go to state 11

    statement                      shift and go to state 12
    imports_statement              shift and go to state 4
    define_block                   shift and go to state 5
    define_macro                   shift and go to state 6
    macro_call                     shift and go to state 7

state 3

    (3) statements -> statement .

    IMPORTS         reduce using rule 3 (statements -> statement .)
    DEFINE          reduce using rule 3 (statements -> statement .)
    DEFINE_MACRO    reduce using rule 3 (statements -> statement .)
    MACRO           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> imports_statement .

    IMPORTS         reduce using rule 4 (statement -> imports_statement .)
    DEFINE          reduce using rule 4 (statement -> imports_statement .)
    DEFINE_MACRO    reduce using rule 4 (statement -> imports_statement .)
    MACRO           reduce using rule 4 (statement -> imports_statement .)
    $end            reduce using rule 4 (statement -> imports_statement .)


state 5

    (5) statement -> define_block .

    IMPORTS         reduce using rule 5 (statement -> define_block .)
    DEFINE          reduce using rule 5 (statement -> define_block .)
    DEFINE_MACRO    reduce using rule 5 (statement -> define_block .)
    MACRO           reduce using rule 5 (statement -> define_block .)
    $end            reduce using rule 5 (statement -> define_block .)


state 6

    (6) statement -> define_macro .

    IMPORTS         reduce using rule 6 (statement -> define_macro .)
    DEFINE          reduce using rule 6 (statement -> define_macro .)
    DEFINE_MACRO    reduce using rule 6 (statement -> define_macro .)
    MACRO           reduce using rule 6 (statement -> define_macro .)
    $end            reduce using rule 6 (statement -> define_macro .)


state 7

    (7) statement -> macro_call .

    IMPORTS         reduce using rule 7 (statement -> macro_call .)
    DEFINE          reduce using rule 7 (statement -> macro_call .)
    DEFINE_MACRO    reduce using rule 7 (statement -> macro_call .)
    MACRO           reduce using rule 7 (statement -> macro_call .)
    $end            reduce using rule 7 (statement -> macro_call .)


state 8

    (8) imports_statement -> IMPORTS . LCURLY import_list RCURLY

    LCURLY          shift and go to state 13


state 9

    (12) define_block -> DEFINE . LCURLY variable_list RCURLY

    LCURLY          shift and go to state 14


state 10

    (23) define_macro -> DEFINE_MACRO . IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY

    IDENTIFIER      shift and go to state 15


state 11

    (29) macro_call -> MACRO . IDENTIFIER LPAREN macro_args RPAREN

    IDENTIFIER      shift and go to state 16


state 12

    (2) statements -> statements statement .

    IMPORTS         reduce using rule 2 (statements -> statements statement .)
    DEFINE          reduce using rule 2 (statements -> statements statement .)
    DEFINE_MACRO    reduce using rule 2 (statements -> statements statement .)
    MACRO           reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)


state 13

    (8) imports_statement -> IMPORTS LCURLY . import_list RCURLY
    (9) import_list -> . import_list import_item
    (10) import_list -> . import_item
    (11) import_item -> . IDENTIFIER

    IDENTIFIER      shift and go to state 19

    import_list                    shift and go to state 17
    import_item                    shift and go to state 18

state 14

    (12) define_block -> DEFINE LCURLY . variable_list RCURLY
    (15) variable_list -> . variable_list variable_definition
    (16) variable_list -> . variable_definition
    (17) variable_definition -> . IDENTIFIER EQUALS value flag_list_opt

    IDENTIFIER      shift and go to state 22

    variable_list                  shift and go to state 20
    variable_definition            shift and go to state 21

state 15

    (23) define_macro -> DEFINE_MACRO IDENTIFIER . LPAREN macro_params RPAREN LCURLY macro_body RCURLY

    LPAREN          shift and go to state 23


state 16

    (29) macro_call -> MACRO IDENTIFIER . LPAREN macro_args RPAREN

    LPAREN          shift and go to state 24


state 17

    (8) imports_statement -> IMPORTS LCURLY import_list . RCURLY
    (9) import_list -> import_list . import_item
    (11) import_item -> . IDENTIFIER

    RCURLY          shift and go to state 25
    IDENTIFIER      shift and go to state 19

    import_item                    shift and go to state 26

state 18

    (10) import_list -> import_item .

    RCURLY          reduce using rule 10 (import_list -> import_item .)
    IDENTIFIER      reduce using rule 10 (import_list -> import_item .)


state 19

    (11) import_item -> IDENTIFIER .

    RCURLY          reduce using rule 11 (import_item -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 11 (import_item -> IDENTIFIER .)


state 20

    (12) define_block -> DEFINE LCURLY variable_list . RCURLY
    (15) variable_list -> variable_list . variable_definition
    (17) variable_definition -> . IDENTIFIER EQUALS value flag_list_opt

    RCURLY          shift and go to state 27
    IDENTIFIER      shift and go to state 22

    variable_definition            shift and go to state 28

state 21

    (16) variable_list -> variable_definition .

    RCURLY          reduce using rule 16 (variable_list -> variable_definition .)
    IDENTIFIER      reduce using rule 16 (variable_list -> variable_definition .)


state 22

    (17) variable_definition -> IDENTIFIER . EQUALS value flag_list_opt

    EQUALS          shift and go to state 29


state 23

    (23) define_macro -> DEFINE_MACRO IDENTIFIER LPAREN . macro_params RPAREN LCURLY macro_body RCURLY
    (26) macro_params -> . macro_params COMMA DOLLAR_IDENTIFIER
    (27) macro_params -> . DOLLAR_IDENTIFIER
    (28) macro_params -> . empty
    (37) empty -> .

    DOLLAR_IDENTIFIER shift and go to state 31
    RPAREN          reduce using rule 37 (empty -> .)
    COMMA           reduce using rule 37 (empty -> .)

    macro_params                   shift and go to state 30
    empty                          shift and go to state 32

state 24

    (29) macro_call -> MACRO IDENTIFIER LPAREN . macro_args RPAREN
    (30) macro_args -> . macro_args COMMA value
    (31) macro_args -> . value
    (32) macro_args -> . empty
    (33) value -> . STRING
    (34) value -> . NUMBER
    (35) value -> . IDENTIFIER
    (36) value -> . DOLLAR_IDENTIFIER
    (37) empty -> .

    STRING          shift and go to state 37
    NUMBER          shift and go to state 38
    IDENTIFIER      shift and go to state 33
    DOLLAR_IDENTIFIER shift and go to state 39
    RPAREN          reduce using rule 37 (empty -> .)
    COMMA           reduce using rule 37 (empty -> .)

    macro_args                     shift and go to state 34
    value                          shift and go to state 35
    empty                          shift and go to state 36

state 25

    (8) imports_statement -> IMPORTS LCURLY import_list RCURLY .

    IMPORTS         reduce using rule 8 (imports_statement -> IMPORTS LCURLY import_list RCURLY .)
    DEFINE          reduce using rule 8 (imports_statement -> IMPORTS LCURLY import_list RCURLY .)
    DEFINE_MACRO    reduce using rule 8 (imports_statement -> IMPORTS LCURLY import_list RCURLY .)
    MACRO           reduce using rule 8 (imports_statement -> IMPORTS LCURLY import_list RCURLY .)
    $end            reduce using rule 8 (imports_statement -> IMPORTS LCURLY import_list RCURLY .)


state 26

    (9) import_list -> import_list import_item .

    RCURLY          reduce using rule 9 (import_list -> import_list import_item .)
    IDENTIFIER      reduce using rule 9 (import_list -> import_list import_item .)


state 27

    (12) define_block -> DEFINE LCURLY variable_list RCURLY .

    IMPORTS         reduce using rule 12 (define_block -> DEFINE LCURLY variable_list RCURLY .)
    DEFINE          reduce using rule 12 (define_block -> DEFINE LCURLY variable_list RCURLY .)
    DEFINE_MACRO    reduce using rule 12 (define_block -> DEFINE LCURLY variable_list RCURLY .)
    MACRO           reduce using rule 12 (define_block -> DEFINE LCURLY variable_list RCURLY .)
    $end            reduce using rule 12 (define_block -> DEFINE LCURLY variable_list RCURLY .)


state 28

    (15) variable_list -> variable_list variable_definition .

    RCURLY          reduce using rule 15 (variable_list -> variable_list variable_definition .)
    IDENTIFIER      reduce using rule 15 (variable_list -> variable_list variable_definition .)


state 29

    (17) variable_definition -> IDENTIFIER EQUALS . value flag_list_opt
    (33) value -> . STRING
    (34) value -> . NUMBER
    (35) value -> . IDENTIFIER
    (36) value -> . DOLLAR_IDENTIFIER

    STRING          shift and go to state 37
    NUMBER          shift and go to state 38
    IDENTIFIER      shift and go to state 33
    DOLLAR_IDENTIFIER shift and go to state 39

    value                          shift and go to state 40

state 30

    (23) define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params . RPAREN LCURLY macro_body RCURLY
    (26) macro_params -> macro_params . COMMA DOLLAR_IDENTIFIER

    RPAREN          shift and go to state 41
    COMMA           shift and go to state 42


state 31

    (27) macro_params -> DOLLAR_IDENTIFIER .

    RPAREN          reduce using rule 27 (macro_params -> DOLLAR_IDENTIFIER .)
    COMMA           reduce using rule 27 (macro_params -> DOLLAR_IDENTIFIER .)


state 32

    (28) macro_params -> empty .

    RPAREN          reduce using rule 28 (macro_params -> empty .)
    COMMA           reduce using rule 28 (macro_params -> empty .)


state 33

    (35) value -> IDENTIFIER .

    RPAREN          reduce using rule 35 (value -> IDENTIFIER .)
    COMMA           reduce using rule 35 (value -> IDENTIFIER .)
    LBRACKET        reduce using rule 35 (value -> IDENTIFIER .)
    RCURLY          reduce using rule 35 (value -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 35 (value -> IDENTIFIER .)


state 34

    (29) macro_call -> MACRO IDENTIFIER LPAREN macro_args . RPAREN
    (30) macro_args -> macro_args . COMMA value

    RPAREN          shift and go to state 43
    COMMA           shift and go to state 44


state 35

    (31) macro_args -> value .

    RPAREN          reduce using rule 31 (macro_args -> value .)
    COMMA           reduce using rule 31 (macro_args -> value .)


state 36

    (32) macro_args -> empty .

    RPAREN          reduce using rule 32 (macro_args -> empty .)
    COMMA           reduce using rule 32 (macro_args -> empty .)


state 37

    (33) value -> STRING .

    RPAREN          reduce using rule 33 (value -> STRING .)
    COMMA           reduce using rule 33 (value -> STRING .)
    LBRACKET        reduce using rule 33 (value -> STRING .)
    RCURLY          reduce using rule 33 (value -> STRING .)
    IDENTIFIER      reduce using rule 33 (value -> STRING .)


state 38

    (34) value -> NUMBER .

    RPAREN          reduce using rule 34 (value -> NUMBER .)
    COMMA           reduce using rule 34 (value -> NUMBER .)
    LBRACKET        reduce using rule 34 (value -> NUMBER .)
    RCURLY          reduce using rule 34 (value -> NUMBER .)
    IDENTIFIER      reduce using rule 34 (value -> NUMBER .)


state 39

    (36) value -> DOLLAR_IDENTIFIER .

    RPAREN          reduce using rule 36 (value -> DOLLAR_IDENTIFIER .)
    COMMA           reduce using rule 36 (value -> DOLLAR_IDENTIFIER .)
    LBRACKET        reduce using rule 36 (value -> DOLLAR_IDENTIFIER .)
    RCURLY          reduce using rule 36 (value -> DOLLAR_IDENTIFIER .)
    IDENTIFIER      reduce using rule 36 (value -> DOLLAR_IDENTIFIER .)


state 40

    (17) variable_definition -> IDENTIFIER EQUALS value . flag_list_opt
    (18) flag_list_opt -> . LBRACKET flag_list RBRACKET
    (19) flag_list_opt -> . empty
    (37) empty -> .

    LBRACKET        shift and go to state 46
    RCURLY          reduce using rule 37 (empty -> .)
    IDENTIFIER      reduce using rule 37 (empty -> .)

    flag_list_opt                  shift and go to state 45
    empty                          shift and go to state 47

state 41

    (23) define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN . LCURLY macro_body RCURLY

    LCURLY          shift and go to state 48


state 42

    (26) macro_params -> macro_params COMMA . DOLLAR_IDENTIFIER

    DOLLAR_IDENTIFIER shift and go to state 49


state 43

    (29) macro_call -> MACRO IDENTIFIER LPAREN macro_args RPAREN .

    IMPORTS         reduce using rule 29 (macro_call -> MACRO IDENTIFIER LPAREN macro_args RPAREN .)
    DEFINE          reduce using rule 29 (macro_call -> MACRO IDENTIFIER LPAREN macro_args RPAREN .)
    DEFINE_MACRO    reduce using rule 29 (macro_call -> MACRO IDENTIFIER LPAREN macro_args RPAREN .)
    MACRO           reduce using rule 29 (macro_call -> MACRO IDENTIFIER LPAREN macro_args RPAREN .)
    $end            reduce using rule 29 (macro_call -> MACRO IDENTIFIER LPAREN macro_args RPAREN .)


state 44

    (30) macro_args -> macro_args COMMA . value
    (33) value -> . STRING
    (34) value -> . NUMBER
    (35) value -> . IDENTIFIER
    (36) value -> . DOLLAR_IDENTIFIER

    STRING          shift and go to state 37
    NUMBER          shift and go to state 38
    IDENTIFIER      shift and go to state 33
    DOLLAR_IDENTIFIER shift and go to state 39

    value                          shift and go to state 50

state 45

    (17) variable_definition -> IDENTIFIER EQUALS value flag_list_opt .

    RCURLY          reduce using rule 17 (variable_definition -> IDENTIFIER EQUALS value flag_list_opt .)
    IDENTIFIER      reduce using rule 17 (variable_definition -> IDENTIFIER EQUALS value flag_list_opt .)


state 46

    (18) flag_list_opt -> LBRACKET . flag_list RBRACKET
    (20) flag_list -> . flag_list COMMA IDENTIFIER
    (21) flag_list -> . flag_list IDENTIFIER
    (22) flag_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 52

    flag_list                      shift and go to state 51

state 47

    (19) flag_list_opt -> empty .

    RCURLY          reduce using rule 19 (flag_list_opt -> empty .)
    IDENTIFIER      reduce using rule 19 (flag_list_opt -> empty .)


state 48

    (23) define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY . macro_body RCURLY
    (24) macro_body -> . macro_body ANY_TEXT
    (25) macro_body -> . ANY_TEXT

    ANY_TEXT        shift and go to state 54

    macro_body                     shift and go to state 53

state 49

    (26) macro_params -> macro_params COMMA DOLLAR_IDENTIFIER .

    RPAREN          reduce using rule 26 (macro_params -> macro_params COMMA DOLLAR_IDENTIFIER .)
    COMMA           reduce using rule 26 (macro_params -> macro_params COMMA DOLLAR_IDENTIFIER .)


state 50

    (30) macro_args -> macro_args COMMA value .

    RPAREN          reduce using rule 30 (macro_args -> macro_args COMMA value .)
    COMMA           reduce using rule 30 (macro_args -> macro_args COMMA value .)


state 51

    (18) flag_list_opt -> LBRACKET flag_list . RBRACKET
    (20) flag_list -> flag_list . COMMA IDENTIFIER
    (21) flag_list -> flag_list . IDENTIFIER

    RBRACKET        shift and go to state 55
    COMMA           shift and go to state 56
    IDENTIFIER      shift and go to state 57


state 52

    (22) flag_list -> IDENTIFIER .

    RBRACKET        reduce using rule 22 (flag_list -> IDENTIFIER .)
    COMMA           reduce using rule 22 (flag_list -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 22 (flag_list -> IDENTIFIER .)


state 53

    (23) define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body . RCURLY
    (24) macro_body -> macro_body . ANY_TEXT

    RCURLY          shift and go to state 58
    ANY_TEXT        shift and go to state 59


state 54

    (25) macro_body -> ANY_TEXT .

    RCURLY          reduce using rule 25 (macro_body -> ANY_TEXT .)
    ANY_TEXT        reduce using rule 25 (macro_body -> ANY_TEXT .)


state 55

    (18) flag_list_opt -> LBRACKET flag_list RBRACKET .

    RCURLY          reduce using rule 18 (flag_list_opt -> LBRACKET flag_list RBRACKET .)
    IDENTIFIER      reduce using rule 18 (flag_list_opt -> LBRACKET flag_list RBRACKET .)


state 56

    (20) flag_list -> flag_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 60


state 57

    (21) flag_list -> flag_list IDENTIFIER .

    RBRACKET        reduce using rule 21 (flag_list -> flag_list IDENTIFIER .)
    COMMA           reduce using rule 21 (flag_list -> flag_list IDENTIFIER .)
    IDENTIFIER      reduce using rule 21 (flag_list -> flag_list IDENTIFIER .)


state 58

    (23) define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY .

    IMPORTS         reduce using rule 23 (define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY .)
    DEFINE          reduce using rule 23 (define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY .)
    DEFINE_MACRO    reduce using rule 23 (define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY .)
    MACRO           reduce using rule 23 (define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY .)
    $end            reduce using rule 23 (define_macro -> DEFINE_MACRO IDENTIFIER LPAREN macro_params RPAREN LCURLY macro_body RCURLY .)


state 59

    (24) macro_body -> macro_body ANY_TEXT .

    RCURLY          reduce using rule 24 (macro_body -> macro_body ANY_TEXT .)
    ANY_TEXT        reduce using rule 24 (macro_body -> macro_body ANY_TEXT .)


state 60

    (20) flag_list -> flag_list COMMA IDENTIFIER .

    RBRACKET        reduce using rule 20 (flag_list -> flag_list COMMA IDENTIFIER .)
    COMMA           reduce using rule 20 (flag_list -> flag_list COMMA IDENTIFIER .)
    IDENTIFIER      reduce using rule 20 (flag_list -> flag_list COMMA IDENTIFIER .)

